[gd_scene load_steps=9 format=3 uid="uid://dltagou3gheta"]

[ext_resource type="Texture2D" uid="uid://dsb7m3j866tdf" path="res://res/Bubbles.png" id="1_ym4jp"]
[ext_resource type="Script" path="res://src/game/bubble.gd" id="2_05upq"]
[ext_resource type="Texture2D" uid="uid://bmmkeggy7pvo2" path="res://res/Skeeter.png" id="3_1rsxl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rb00x"]

[sub_resource type="Animation" id="Animation_3a42n"]
resource_name = "Despawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_2878x"]
resource_name = "Pop"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 3]
}

[sub_resource type="Animation" id="Animation_xjamk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjp1j"]
_data = {
"Despawn": SubResource("Animation_3a42n"),
"Pop": SubResource("Animation_2878x"),
"RESET": SubResource("Animation_xjamk")
}

[node name="Bubble" type="Sprite2D"]
texture = ExtResource("1_ym4jp")
hframes = 8
vframes = 8
script = ExtResource("2_05upq")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_rb00x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjp1j")
}

[node name="SkeeterClone" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.54902)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_1rsxl")
hframes = 4

[connection signal="input_event" from="CharacterBody2D" to="." method="_on_character_body_2d_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
